fix(节能优化工具): 修复状态轮询和确认流程问题
修复get_temperature_load_rate函数中的状态轮询逻辑，确保优化进度实时反馈
优化确认流程话术，使用固定格式请求用户授权
修复字符串格式化方式，使用String.format替代formatted方法
移除不必要的@Serial注解